minor fix related to the UI

--- a/todoFrontEnd/index.html
+++ b/todoFrontEnd/index.html
@@ -40,7 +40,7 @@
           </label>
           <button type="submit">Confirm the Todo Status</button>
         </form>
-        <span class="close">&times;</span>
+        <span class="close" id="closeModal">&times;</span>
       </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
